Import changes from testcontainers-firebase module